create(src1004, src1005) 适配器

--- a/C++ProgramDesign3rd/C++ProgramDesign3rd.vcxproj
+++ b/C++ProgramDesign3rd/C++ProgramDesign3rd.vcxproj
@@ -217,6 +217,8 @@
     <ClCompile Include="src\ch10\src1001.cpp" />
     <ClCompile Include="src\ch10\src1002.cpp" />
     <ClCompile Include="src\ch10\src1003.cpp" />
+    <ClCompile Include="src\ch10\src1004.cpp" />
+    <ClCompile Include="src\ch10\src1005.cpp" />
     <ClCompile Include="src\chap03\src03_11.cpp" />
     <ClCompile Include="src\chap03\src03_12.cpp" />
     <ClCompile Include="src\chap03\src03_13.cpp" />
