--- a/C++ProgramDesign3rd/C++ProgramDesign3rd.vcxproj
+++ b/C++ProgramDesign3rd/C++ProgramDesign3rd.vcxproj
@@ -159,13 +159,10 @@
     <ClCompile Include="ch08.cpp" />
     <ClCompile Include="ch09.cpp" />
     <ClCompile Include="ch10.cpp" />
-    <ClCompile Include="ch10\src1008.cpp" />
-    <ClCompile Include="ch10\src1009.cpp" />
     <ClCompile Include="chap03.cpp" />
     <ClCompile Include="ch04.cpp">
       <DeploymentContent>false</DeploymentContent>
     </ClCompile>
-    <ClCompile Include="src1007.cpp" />
     <ClCompile Include="src\ch04\Line.cpp" />
     <ClCompile Include="src\ch04\Point.cpp" />
     <ClCompile Include="src\ch04\src0402.cpp" />
@@ -222,6 +219,15 @@
     <ClCompile Include="src\ch10\src1004.cpp" />
     <ClCompile Include="src\ch10\src1005.cpp" />
     <ClCompile Include="src\ch10\src1006.cpp" />
+    <ClCompile Include="src\ch10\src1007.cpp" />
+    <ClCompile Include="src\ch10\src1008.cpp" />
+    <ClCompile Include="src\ch10\src1009.cpp" />
+    <ClCompile Include="src\ch10\src1010.cpp" />
+    <ClCompile Include="src\ch10\src1011.cpp" />
+    <ClCompile Include="src\ch10\src1012.cpp" />
+    <ClCompile Include="src\ch10\src1013.cpp" />
+    <ClCompile Include="src\ch10\src1014.cpp" />
+    <ClCompile Include="src\ch10\src1015.cpp" />
     <ClCompile Include="src\chap03\src03_11.cpp" />
     <ClCompile Include="src\chap03\src03_12.cpp" />
     <ClCompile Include="src\chap03\src03_13.cpp" />
