--- a/C++ProgramDesign3rd/C++ProgramDesign3rd.vcxproj
+++ b/C++ProgramDesign3rd/C++ProgramDesign3rd.vcxproj
@@ -159,7 +159,8 @@
     <ClCompile Include="ch08.cpp" />
     <ClCompile Include="ch09.cpp" />
     <ClCompile Include="ch10.cpp" />
-    <ClCompile Include="chap03.cpp" />
+    <ClCompile Include="ch11.cpp" />
+    <ClCompile Include="ch03.cpp" />
     <ClCompile Include="ch04.cpp">
       <DeploymentContent>false</DeploymentContent>
     </ClCompile>
@@ -228,23 +229,24 @@
     <ClCompile Include="src\ch10\src1013.cpp" />
     <ClCompile Include="src\ch10\src1014.cpp" />
     <ClCompile Include="src\ch10\src1015.cpp" />
-    <ClCompile Include="src\chap03\src03_11.cpp" />
-    <ClCompile Include="src\chap03\src03_12.cpp" />
-    <ClCompile Include="src\chap03\src03_13.cpp" />
-    <ClCompile Include="src\chap03\src03_14.cpp" />
-    <ClCompile Include="src\chap03\src03_15.cpp" />
-    <ClCompile Include="src\chap03\src03_16.cpp" />
-    <ClCompile Include="src\chap03\src03_17.cpp" />
-    <ClCompile Include="src\chap03\src3_1.cpp" />
-    <ClCompile Include="src\chap03\src3_10.cpp" />
-    <ClCompile Include="src\chap03\src3_2.cpp" />
-    <ClCompile Include="src\chap03\src3_3.cpp" />
-    <ClCompile Include="src\chap03\src3_4.cpp" />
-    <ClCompile Include="src\chap03\src3_5.cpp" />
-    <ClCompile Include="src\chap03\src3_6.cpp" />
-    <ClCompile Include="src\chap03\src3_7.cpp" />
-    <ClCompile Include="src\chap03\src3_8.cpp" />
-    <ClCompile Include="src\chap03\src3_9.cpp" />
+    <ClCompile Include="src\ch11\src1101.cpp" />
+    <ClCompile Include="src\chap03\src0311.cpp" />
+    <ClCompile Include="src\chap03\src0312.cpp" />
+    <ClCompile Include="src\chap03\src0313.cpp" />
+    <ClCompile Include="src\chap03\src0314.cpp" />
+    <ClCompile Include="src\chap03\src0315.cpp" />
+    <ClCompile Include="src\chap03\src0316.cpp" />
+    <ClCompile Include="src\chap03\src0317.cpp" />
+    <ClCompile Include="src\chap03\src0301.cpp" />
+    <ClCompile Include="src\chap03\src0310.cpp" />
+    <ClCompile Include="src\chap03\src0302.cpp" />
+    <ClCompile Include="src\chap03\src0303.cpp" />
+    <ClCompile Include="src\chap03\src0304.cpp" />
+    <ClCompile Include="src\chap03\src0305.cpp" />
+    <ClCompile Include="src\chap03\src0306.cpp" />
+    <ClCompile Include="src\chap03\src0307.cpp" />
+    <ClCompile Include="src\chap03\src0308.cpp" />
+    <ClCompile Include="src\chap03\src0309.cpp" />
     <ClCompile Include="src\ch04\src0401.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -259,7 +261,8 @@
     <ClInclude Include="include\ch09.h" />
     <ClInclude Include="include\Array.h" />
     <ClInclude Include="include\ch10.h" />
-    <ClInclude Include="include\chap3.h" />
+    <ClInclude Include="include\ch11.h" />
+    <ClInclude Include="include\ch03.h" />
     <ClInclude Include="include\Clock.h" />
     <ClInclude Include="include\complex.h" />
     <ClInclude Include="include\LinkedList.h" />
