--- a/C++ProgramDesign3rd/C++ProgramDesign3rd.vcxproj.filters
+++ b/C++ProgramDesign3rd/C++ProgramDesign3rd.vcxproj.filters
@@ -45,55 +45,55 @@
     <ClCompile Include="C++ProgramDesign3rd.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="src\chap03\src0301.cpp">
+    <ClCompile Include="src\ch03\src0301.cpp">
       <Filter>Source Files\ch03</Filter>
     </ClCompile>
-    <ClCompile Include="src\chap03\src0302.cpp">
+    <ClCompile Include="src\ch03\src0302.cpp">
       <Filter>Source Files\ch03</Filter>
     </ClCompile>
-    <ClCompile Include="src\chap03\src0303.cpp">
+    <ClCompile Include="src\ch03\src0303.cpp">
       <Filter>Source Files\ch03</Filter>
     </ClCompile>
-    <ClCompile Include="src\chap03\src0304.cpp">
+    <ClCompile Include="src\ch03\src0304.cpp">
       <Filter>Source Files\ch03</Filter>
     </ClCompile>
-    <ClCompile Include="src\chap03\src0305.cpp">
+    <ClCompile Include="src\ch03\src0305.cpp">
       <Filter>Source Files\ch03</Filter>
     </ClCompile>
-    <ClCompile Include="src\chap03\src0306.cpp">
+    <ClCompile Include="src\ch03\src0306.cpp">
       <Filter>Source Files\ch03</Filter>
     </ClCompile>
-    <ClCompile Include="src\chap03\src0307.cpp">
+    <ClCompile Include="src\ch03\src0307.cpp">
       <Filter>Source Files\ch03</Filter>
     </ClCompile>
-    <ClCompile Include="src\chap03\src0308.cpp">
+    <ClCompile Include="src\ch03\src0308.cpp">
       <Filter>Source Files\ch03</Filter>
     </ClCompile>
-    <ClCompile Include="src\chap03\src0309.cpp">
+    <ClCompile Include="src\ch03\src0309.cpp">
       <Filter>Source Files\ch03</Filter>
     </ClCompile>
-    <ClCompile Include="src\chap03\src0310.cpp">
+    <ClCompile Include="src\ch03\src0310.cpp">
       <Filter>Source Files\ch03</Filter>
     </ClCompile>
-    <ClCompile Include="src\chap03\src0311.cpp">
+    <ClCompile Include="src\ch03\src0311.cpp">
       <Filter>Source Files\ch03</Filter>
     </ClCompile>
-    <ClCompile Include="src\chap03\src0312.cpp">
+    <ClCompile Include="src\ch03\src0312.cpp">
       <Filter>Source Files\ch03</Filter>
     </ClCompile>
-    <ClCompile Include="src\chap03\src0313.cpp">
+    <ClCompile Include="src\ch03\src0313.cpp">
       <Filter>Source Files\ch03</Filter>
     </ClCompile>
-    <ClCompile Include="src\chap03\src0314.cpp">
+    <ClCompile Include="src\ch03\src0314.cpp">
       <Filter>Source Files\ch03</Filter>
     </ClCompile>
-    <ClCompile Include="src\chap03\src0315.cpp">
+    <ClCompile Include="src\ch03\src0315.cpp">
       <Filter>Source Files\ch03</Filter>
     </ClCompile>
-    <ClCompile Include="src\chap03\src0316.cpp">
+    <ClCompile Include="src\ch03\src0316.cpp">
       <Filter>Source Files\ch03</Filter>
     </ClCompile>
-    <ClCompile Include="src\chap03\src0317.cpp">
+    <ClCompile Include="src\ch03\src0317.cpp">
       <Filter>Source Files\ch03</Filter>
     </ClCompile>
     <ClCompile Include="ch03.cpp">
