--- a/C++ProgramDesign3rd/C++ProgramDesign3rd.vcxproj
+++ b/C++ProgramDesign3rd/C++ProgramDesign3rd.vcxproj
@@ -252,6 +252,11 @@
     <ClCompile Include="src\ch11\src1103.cpp" />
     <ClCompile Include="src\ch11\src1104.cpp" />
     <ClCompile Include="src\ch11\src1105.cpp" />
+    <ClCompile Include="src\ch11\src1106.cpp" />
+    <ClCompile Include="src\ch11\src1107.cpp" />
+    <ClCompile Include="src\ch11\src1108.cpp" />
+    <ClCompile Include="src\ch11\src1109.cpp" />
+    <ClCompile Include="src\ch11\src1110.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="C++ProgramDesign3rd.h" />
